// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/JsonEditor/State > iterateJsonDict > should return one state object utilizing Schema keys and object keys, when input is a flat object 1`] = `
[
  {
    "items": [
      {
        "address": [
          "a",
        ],
        "errors": [],
        "key": "a",
        "reactId": "/a+1",
        "required": true,
        "sortIndex": -9007199254740990,
        "type": "number",
        "value": 1,
        "valueSchema": {
          "default": 10000000000,
          "type": "number",
        },
      },
      {
        "address": [
          "b",
        ],
        "errors": [],
        "key": "b",
        "reactId": "/b+undefined",
        "required": true,
        "sortIndex": -9007199254740988,
        "type": "string",
        "value": Symbol(empty),
        "valueSchema": {
          "type": "string",
        },
      },
      {
        "address": [
          "optList",
        ],
        "errors": [],
        "key": "optList",
        "reactId": "/optList+undefined",
        "required": false,
        "sortIndex": -9007199254740986,
        "type": "array",
        "value": Symbol(empty),
        "valueSchema": {
          "items": {
            "properties": {
              "id": {
                "default": 123,
                "type": "number",
              },
              "name": {
                "default": "Abcdef",
                "type": "string",
              },
            },
            "type": "object",
          },
          "type": "array",
        },
      },
      {
        "address": [
          "optEnum",
        ],
        "errors": [],
        "key": "optEnum",
        "reactId": "/optEnum+undefined",
        "required": false,
        "sortIndex": -9007199254740979,
        "type": "string",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            "one",
            "two",
            "three",
          ],
          "type": "string",
        },
      },
      {
        "address": [
          "enumObjects",
        ],
        "errors": [],
        "key": "enumObjects",
        "reactId": "/enumObjects+undefined",
        "required": false,
        "sortIndex": -9007199254740977,
        "type": "object",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            {
              "id": 1,
            },
            {
              "id": 2,
            },
            {
              "id": 3,
            },
          ],
          "type": "object",
        },
      },
      {
        "address": [
          "enumArrays",
        ],
        "errors": [],
        "key": "enumArrays",
        "reactId": "/enumArrays+undefined",
        "required": false,
        "sortIndex": -9007199254740975,
        "type": "array",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            [
              1,
              2,
              3,
            ],
            [
              3,
              4,
              5,
            ],
            [
              6,
              7,
              8,
            ],
          ],
          "type": "array",
        },
      },
      {
        "address": [
          "enumArraysAndObjects",
        ],
        "errors": [],
        "key": "enumArraysAndObjects",
        "reactId": "/enumArraysAndObjects+undefined",
        "required": false,
        "sortIndex": -9007199254740973,
        "type": "array",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            [
              "miles",
              {
                "format": "12h",
              },
            ],
            [
              "kilometers",
              {
                "format": "24h",
              },
            ],
            {
              "name": "unspecified",
            },
          ],
          "type": "array",
        },
      },
      {
        "address": [
          "111",
        ],
        "errors": [],
        "key": "111",
        "reactId": "/111+"aaa"",
        "required": false,
        "sortIndex": 0,
        "value": "aaa",
        "valueSchema": undefined,
      },
      {
        "address": [
          "d",
        ],
        "errors": [],
        "key": "d",
        "reactId": "/d+{"e":"f"}",
        "required": false,
        "sortIndex": 0,
        "value": {
          "e": "f",
        },
        "valueSchema": undefined,
      },
      {
        "address": [
          "c",
        ],
        "errors": [],
        "key": "c",
        "reactId": "/c+[1,2,3]",
        "required": false,
        "sortIndex": 15,
        "value": [
          1,
          2,
          3,
        ],
        "valueSchema": undefined,
      },
    ],
    "parent": {
      "111": "aaa",
      "a": 1,
      "c": [
        1,
        2,
        3,
      ],
      "d": {
        "e": "f",
      },
    },
  },
]
`;

exports[`components/JsonEditor/State > iterateJsonDict > should return one state object utilizing Schema keys, when input is an empty object 1`] = `
[
  {
    "items": [
      {
        "address": [
          "a",
        ],
        "errors": [],
        "key": "a",
        "reactId": "/a+undefined",
        "required": true,
        "sortIndex": 1,
        "type": "number",
        "value": 10000000000,
        "valueSchema": {
          "default": 10000000000,
          "type": "number",
        },
      },
      {
        "address": [
          "b",
        ],
        "errors": [],
        "key": "b",
        "reactId": "/b+undefined",
        "required": true,
        "sortIndex": 3,
        "type": "string",
        "value": Symbol(empty),
        "valueSchema": {
          "type": "string",
        },
      },
      {
        "address": [
          "optList",
        ],
        "errors": [],
        "key": "optList",
        "reactId": "/optList+undefined",
        "required": false,
        "sortIndex": 5,
        "type": "array",
        "value": Symbol(empty),
        "valueSchema": {
          "items": {
            "properties": {
              "id": {
                "default": 123,
                "type": "number",
              },
              "name": {
                "default": "Abcdef",
                "type": "string",
              },
            },
            "type": "object",
          },
          "type": "array",
        },
      },
      {
        "address": [
          "optEnum",
        ],
        "errors": [],
        "key": "optEnum",
        "reactId": "/optEnum+undefined",
        "required": false,
        "sortIndex": 12,
        "type": "string",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            "one",
            "two",
            "three",
          ],
          "type": "string",
        },
      },
      {
        "address": [
          "enumObjects",
        ],
        "errors": [],
        "key": "enumObjects",
        "reactId": "/enumObjects+undefined",
        "required": false,
        "sortIndex": 14,
        "type": "object",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            {
              "id": 1,
            },
            {
              "id": 2,
            },
            {
              "id": 3,
            },
          ],
          "type": "object",
        },
      },
      {
        "address": [
          "enumArrays",
        ],
        "errors": [],
        "key": "enumArrays",
        "reactId": "/enumArrays+undefined",
        "required": false,
        "sortIndex": 16,
        "type": "array",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            [
              1,
              2,
              3,
            ],
            [
              3,
              4,
              5,
            ],
            [
              6,
              7,
              8,
            ],
          ],
          "type": "array",
        },
      },
      {
        "address": [
          "enumArraysAndObjects",
        ],
        "errors": [],
        "key": "enumArraysAndObjects",
        "reactId": "/enumArraysAndObjects+undefined",
        "required": false,
        "sortIndex": 18,
        "type": "array",
        "value": Symbol(empty),
        "valueSchema": {
          "enum": [
            [
              "miles",
              {
                "format": "12h",
              },
            ],
            [
              "kilometers",
              {
                "format": "24h",
              },
            ],
            {
              "name": "unspecified",
            },
          ],
          "type": "array",
        },
      },
    ],
    "parent": {},
  },
]
`;

exports[`components/JsonEditor/State > iterateJsonDict > should return three state objects, when input is an empty object and the path is provided 1`] = `
[
  {
    "items": [
      {
        "address": [
          "a",
        ],
        "errors": [],
        "key": "a",
        "reactId": "/a+undefined",
        "required": false,
        "sortIndex": 1,
        "type": "object",
        "value": Symbol(empty),
        "valueSchema": {
          "properties": {
            "b": {
              "properties": {
                "c": {
                  "properties": {
                    "d": {
                      "properties": {
                        "e": {
                          "properties": {
                            "f": {
                              "properties": {
                                "g": {
                                  "properties": {
                                    "h": {
                                      "properties": {
                                        "i": {
                                          "properties": {
                                            "j": {
                                              "properties": {
                                                "k": {
                                                  "properties": {
                                                    "testMaxItems": {
                                                      "items": [
                                                        {
                                                          "maxItems": 3,
                                                          "type": "number",
                                                        },
                                                      ],
                                                      "type": "array",
                                                    },
                                                  },
                                                  "type": "object",
                                                },
                                              },
                                              "type": "object",
                                            },
                                          },
                                          "type": "object",
                                        },
                                      },
                                      "type": "object",
                                    },
                                  },
                                  "type": "object",
                                },
                              },
                              "type": "object",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
      },
    ],
    "parent": {},
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
        ],
        "errors": [],
        "key": "b",
        "reactId": "/a/b+undefined",
        "required": false,
        "sortIndex": 3,
        "type": "object",
        "value": Symbol(empty),
        "valueSchema": {
          "properties": {
            "c": {
              "properties": {
                "d": {
                  "properties": {
                    "e": {
                      "properties": {
                        "f": {
                          "properties": {
                            "g": {
                              "properties": {
                                "h": {
                                  "properties": {
                                    "i": {
                                      "properties": {
                                        "j": {
                                          "properties": {
                                            "k": {
                                              "properties": {
                                                "testMaxItems": {
                                                  "items": [
                                                    {
                                                      "maxItems": 3,
                                                      "type": "number",
                                                    },
                                                  ],
                                                  "type": "array",
                                                },
                                              },
                                              "type": "object",
                                            },
                                          },
                                          "type": "object",
                                        },
                                      },
                                      "type": "object",
                                    },
                                  },
                                  "type": "object",
                                },
                              },
                              "type": "object",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
      },
    ],
    "parent": undefined,
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          "c",
        ],
        "errors": [],
        "key": "c",
        "reactId": "/a/b/c+undefined",
        "required": false,
        "sortIndex": 5,
        "type": "object",
        "value": Symbol(empty),
        "valueSchema": {
          "properties": {
            "d": {
              "properties": {
                "e": {
                  "properties": {
                    "f": {
                      "properties": {
                        "g": {
                          "properties": {
                            "h": {
                              "properties": {
                                "i": {
                                  "properties": {
                                    "j": {
                                      "properties": {
                                        "k": {
                                          "properties": {
                                            "testMaxItems": {
                                              "items": [
                                                {
                                                  "maxItems": 3,
                                                  "type": "number",
                                                },
                                              ],
                                              "type": "array",
                                            },
                                          },
                                          "type": "object",
                                        },
                                      },
                                      "type": "object",
                                    },
                                  },
                                  "type": "object",
                                },
                              },
                              "type": "object",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
      },
    ],
    "parent": undefined,
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          "c",
          "d",
        ],
        "errors": [],
        "key": "d",
        "reactId": "/a/b/c/d+undefined",
        "required": false,
        "sortIndex": 7,
        "type": "object",
        "value": Symbol(empty),
        "valueSchema": {
          "properties": {
            "e": {
              "properties": {
                "f": {
                  "properties": {
                    "g": {
                      "properties": {
                        "h": {
                          "properties": {
                            "i": {
                              "properties": {
                                "j": {
                                  "properties": {
                                    "k": {
                                      "properties": {
                                        "testMaxItems": {
                                          "items": [
                                            {
                                              "maxItems": 3,
                                              "type": "number",
                                            },
                                          ],
                                          "type": "array",
                                        },
                                      },
                                      "type": "object",
                                    },
                                  },
                                  "type": "object",
                                },
                              },
                              "type": "object",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
      },
    ],
    "parent": undefined,
  },
]
`;

exports[`components/JsonEditor/State > iterateJsonDict > should return three state objects, when input is an object, no Schema and path is provided 1`] = `
[
  {
    "items": [
      {
        "address": [
          "a",
        ],
        "errors": [],
        "key": "a",
        "reactId": "/a+{"b":[1,2,{"c":[{"d":{"e":[1,2,3]}}]}]}",
        "required": false,
        "sortIndex": 0,
        "value": {
          "b": [
            1,
            2,
            {
              "c": [
                {
                  "d": {
                    "e": [
                      1,
                      2,
                      3,
                    ],
                  },
                },
              ],
            },
          ],
        },
        "valueSchema": undefined,
      },
    ],
    "parent": {
      "a": {
        "b": [
          1,
          2,
          {
            "c": [
              {
                "d": {
                  "e": [
                    1,
                    2,
                    3,
                  ],
                },
              },
            ],
          },
        ],
      },
    },
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
        ],
        "errors": [],
        "key": "b",
        "reactId": "/a/b+[1,2,{"c":[{"d":{"e":[1,2,3]}}]}]",
        "required": false,
        "sortIndex": 0,
        "value": [
          1,
          2,
          {
            "c": [
              {
                "d": {
                  "e": [
                    1,
                    2,
                    3,
                  ],
                },
              },
            ],
          },
        ],
        "valueSchema": undefined,
      },
    ],
    "parent": {
      "b": [
        1,
        2,
        {
          "c": [
            {
              "d": {
                "e": [
                  1,
                  2,
                  3,
                ],
              },
            },
          ],
        },
      ],
    },
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          0,
        ],
        "errors": [],
        "key": 0,
        "reactId": "/a/b/0+1",
        "required": false,
        "sortIndex": 0,
        "value": 1,
        "valueSchema": undefined,
      },
      {
        "address": [
          "a",
          "b",
          1,
        ],
        "errors": [],
        "key": 1,
        "reactId": "/a/b/1+2",
        "required": false,
        "sortIndex": 0,
        "value": 2,
        "valueSchema": undefined,
      },
      {
        "address": [
          "a",
          "b",
          2,
        ],
        "errors": [],
        "key": 2,
        "reactId": "/a/b/2+{"c":[{"d":{"e":[1,2,3]}}]}",
        "required": false,
        "sortIndex": 0,
        "value": {
          "c": [
            {
              "d": {
                "e": [
                  1,
                  2,
                  3,
                ],
              },
            },
          ],
        },
        "valueSchema": undefined,
      },
    ],
    "parent": [
      1,
      2,
      {
        "c": [
          {
            "d": {
              "e": [
                1,
                2,
                3,
              ],
            },
          },
        ],
      },
    ],
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          2,
          "c",
        ],
        "errors": [],
        "key": "c",
        "reactId": "/a/b/2/c+[{"d":{"e":[1,2,3]}}]",
        "required": false,
        "sortIndex": 0,
        "value": [
          {
            "d": {
              "e": [
                1,
                2,
                3,
              ],
            },
          },
        ],
        "valueSchema": undefined,
      },
    ],
    "parent": {
      "c": [
        {
          "d": {
            "e": [
              1,
              2,
              3,
            ],
          },
        },
      ],
    },
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          2,
          "c",
          0,
        ],
        "errors": [],
        "key": 0,
        "reactId": "/a/b/2/c/0+{"d":{"e":[1,2,3]}}",
        "required": false,
        "sortIndex": 0,
        "value": {
          "d": {
            "e": [
              1,
              2,
              3,
            ],
          },
        },
        "valueSchema": undefined,
      },
    ],
    "parent": [
      {
        "d": {
          "e": [
            1,
            2,
            3,
          ],
        },
      },
    ],
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          2,
          "c",
          0,
          "d",
        ],
        "errors": [],
        "key": "d",
        "reactId": "/a/b/2/c/0/d+{"e":[1,2,3]}",
        "required": false,
        "sortIndex": 0,
        "value": {
          "e": [
            1,
            2,
            3,
          ],
        },
        "valueSchema": undefined,
      },
    ],
    "parent": {
      "d": {
        "e": [
          1,
          2,
          3,
        ],
      },
    },
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          2,
          "c",
          0,
          "d",
          "e",
        ],
        "errors": [],
        "key": "e",
        "reactId": "/a/b/2/c/0/d/e+[1,2,3]",
        "required": false,
        "sortIndex": 0,
        "value": [
          1,
          2,
          3,
        ],
        "valueSchema": undefined,
      },
    ],
    "parent": {
      "e": [
        1,
        2,
        3,
      ],
    },
  },
  {
    "items": [
      {
        "address": [
          "a",
          "b",
          2,
          "c",
          0,
          "d",
          "e",
          0,
        ],
        "errors": [],
        "key": 0,
        "reactId": "/a/b/2/c/0/d/e/0+1",
        "required": false,
        "sortIndex": 0,
        "value": 1,
        "valueSchema": undefined,
      },
      {
        "address": [
          "a",
          "b",
          2,
          "c",
          0,
          "d",
          "e",
          1,
        ],
        "errors": [],
        "key": 1,
        "reactId": "/a/b/2/c/0/d/e/1+2",
        "required": false,
        "sortIndex": 0,
        "value": 2,
        "valueSchema": undefined,
      },
      {
        "address": [
          "a",
          "b",
          2,
          "c",
          0,
          "d",
          "e",
          2,
        ],
        "errors": [],
        "key": 2,
        "reactId": "/a/b/2/c/0/d/e/2+3",
        "required": false,
        "sortIndex": 0,
        "value": 3,
        "valueSchema": undefined,
      },
    ],
    "parent": [
      1,
      2,
      3,
    ],
  },
]
`;
